fixed some media query spacing issues

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -14,7 +14,6 @@ body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #{{ site.color.secondary-dark }};
-    overflow-y: auto;
 }
 
 .mainBG {
@@ -259,6 +258,41 @@ fieldset[disabled] .btn-xl.active {
     font-size: 1.5em!important;
 }
 
+.logoHeader {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.fill {
+    max-width: 100%;
+    max-height: 100%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    margin: auto;
+}
+
+.carousel,
+.item,
+.active {
+    height: 100%;
+}
+
+.carousel-inner {
+    max-height: 100% !important;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+.clientLogo {
+    padding: 0px 20px;
+}
+
 @media screen and (min-width:1200px) {
     .navbar-default {
         padding: 25px 0;
@@ -300,6 +334,10 @@ fieldset[disabled] .btn-xl.active {
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
+    }
+
+    .clientLogo {
+        padding: 20px;
     }
 }
 
@@ -409,7 +447,7 @@ section {
 section h2.section-heading {
     margin-top: 0;
     margin-bottom: 15px;
-    font-size: 40px;
+    font-size: 2em;
 }
 
 section h3.section-subheading {
@@ -787,43 +825,4 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #{{ site.color.primary }};
-}
-
-.logoHeader {
-    max-height: 100%;
-    max-width: 100%;
-}
-
-/* carousel styles */
-
-.fill {
-    max-width: 100%;
-    max-height: 100%;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    margin: auto;
-}
-
-.carousel,
-.item,
-.active {
-    height: 100%;
-}
-
-.carousel-inner {
-    max-height: 100% !important;
-}
-
-html,
-body {
-    height: 100%;
-}
-
-/* end carousel styles */
-
-.clientLogo {
-    padding: 20px;
 }
